大元の変更を同期。